# crehana-backend-test

./: .dockerignore  .flake8  .gitignore  DECISION_LOG.md  Dockerfile  Dockerfile.test  README.md  docker-compose.test.yml  docker-compose.yml  env.example  pyproject.toml  pytest.ini  requirements.txt
.github/: pull_request_template.md
app/: dependencies.py  main.py
app/api/: __init__.py  auth.py  task_lists.py  tasks.py  users.py
app/application/: dtos.py
app/application/use_cases/: __init__.py  task.py  task_list.py  user.py
app/auth/: __init__.py  dependencies.py  jwt_handler.py  password_handler.py
app/domain/: exceptions.py  repositories.py
app/domain/models/: entities.py  enums.py
app/domain/repositories/: __init__.py  task_list_repository.py  task_repository.py  user_repository.py
app/infrastructure/database/: connection.py  init_db.py
app/infrastructure/models/: __init__.py  task.py  task_list.py  user.py
app/infrastructure/repositories/: __init__.py  task_list_repository.py  task_repository.py  user_repository.py
app/infrastructure/services/: __init__.py  email_service.py
tests/: README.md  conftest.py
tests/integration/api/: test_auth_api.py  test_task_lists_api.py  test_tasks_api.py  test_users_api.py
tests/integration/repositories/: test_sql_repositories.py
tests/unit/application/: test_task_use_cases.py  test_user_use_cases.py
tests/unit/auth/: test_jwt_handler.py  test_password_handler.py
tests/unit/domain/: __init__.py  test_entities.py
tests/unit/infrastructure/: test_repositories.py
